load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "gen_file",
    srcs = [
        "gen_file.py",
    ],
    visibility = [
        "//visibility:public",
    ],
)

py_binary(
    name = "closure_make_deps",
    srcs = ["closure_make_deps.py"],
    visibility = [
        "//javascript:__subpackages__",
        "//third_party/closure/goog:__pkg__",
    ],
)
