load("@rules_ruby//ruby:defs.bzl", "rb_library")

rb_library(
    name = "rspec_matchers",
    testonly = True,
    srcs = ["rspec_matchers.rb"],
    visibility = ["//rb/spec:__subpackages__"],
)

# List of dependencies can be gathered by running:
# bazel query 'kind("rb_.* rule", //rb/spec/...) except attr(tags, "browser-test", //rb/spec/...) except //rb/spec:spec' | xargs -I{} echo '"{}",'

rb_library(
    name = "spec",
    testonly = True,
    visibility = ["//rb:__pkg__"],
    deps = [
        "//rb/spec:rspec_matchers",
        "//rb/spec/integration/selenium/webdriver:action_builder",
        "//rb/spec/integration/selenium/webdriver:bidi",
        "//rb/spec/integration/selenium/webdriver:devtools",
        "//rb/spec/integration/selenium/webdriver:driver",
        "//rb/spec/integration/selenium/webdriver:element",
        "//rb/spec/integration/selenium/webdriver:error",
        "//rb/spec/integration/selenium/webdriver:listener",
        "//rb/spec/integration/selenium/webdriver:manager",
        "//rb/spec/integration/selenium/webdriver:navigation",
        "//rb/spec/integration/selenium/webdriver:select",
        "//rb/spec/integration/selenium/webdriver:shadow_root",
        "//rb/spec/integration/selenium/webdriver:spec_helper",
        "//rb/spec/integration/selenium/webdriver:takes_screenshot",
        "//rb/spec/integration/selenium/webdriver:target_locator",
        "//rb/spec/integration/selenium/webdriver:timeout",
        "//rb/spec/integration/selenium/webdriver:virtual_authenticator",
        "//rb/spec/integration/selenium/webdriver:window",
        "//rb/spec/integration/selenium/webdriver/bidi:browsing_context",
        "//rb/spec/integration/selenium/webdriver/bidi:network",
        "//rb/spec/integration/selenium/webdriver/bidi:script",
        "//rb/spec/integration/selenium/webdriver/chrome:driver",
        "//rb/spec/integration/selenium/webdriver/chrome:options",
        "//rb/spec/integration/selenium/webdriver/chrome:service",
        "//rb/spec/integration/selenium/webdriver/edge:driver",
        "//rb/spec/integration/selenium/webdriver/edge:options",
        "//rb/spec/integration/selenium/webdriver/edge:service",
        "//rb/spec/integration/selenium/webdriver/firefox:driver",
        "//rb/spec/integration/selenium/webdriver/firefox:profile",
        "//rb/spec/integration/selenium/webdriver/firefox:service",
        "//rb/spec/integration/selenium/webdriver/remote:driver",
        "//rb/spec/integration/selenium/webdriver/remote:element",
        "//rb/spec/integration/selenium/webdriver/safari:driver",
        "//rb/spec/unit",
        "//rb/spec/unit:spec_helper",
    ],
)

genrule(
    name = "java-location",
    srcs = [],
    outs = ["java-location.txt"],
    cmd = "echo $(JAVA) > $@",
    toolchains = ["@bazel_tools//tools/jdk:current_java_runtime"],
    visibility = ["//rb/spec:__subpackages__"],
)
