load("@rules_ruby//ruby:defs.bzl", "rb_library")

package(default_visibility = ["//rb:__subpackages__"])

rb_library(
    name = "nightly_version_generator",
    srcs = ["nightly_version_generator.rb"],
)

rb_library(
    name = "bundle_update",
    srcs = ["bundle_update.rb"],
)

rb_library(
    name = "steep_check",
    srcs = ["steep_check.rb"],
)

rb_library(
    name = "rbs_collection_update",
    srcs = ["rbs_collection_update.rb"],
)
