load("//common:defs.bzl", "copy_file")
load("//dotnet:defs.bzl", "csharp_sourcelink_library", "devtools_version_targets", "generated_assembly_info", "generated_resource_utilities", "nuget_pack", "nuget_package")
load(
    "//dotnet:version.bzl",
    "ASSEMBLY_COMPANY",
    "ASSEMBLY_COPYRIGHT",
    "ASSEMBLY_INFORMATIONAL_VERSION",
    "ASSEMBLY_PRODUCT",
    "ASSEMBLY_VERSION",
    "SE_VERSION",
)

exports_files([
    "Properties/ArgumentNullExceptionExtensions.cs",
    "Properties/CallerArgumentExpressionAttribute.cs",
    "Properties/NullableAttributes.cs",
    "Properties/StringSyntaxAttribute.cs",
    "Properties/StringSyntaxConstants.cs",
])

generated_assembly_info(
    name = "assembly-info",
    company = ASSEMBLY_COMPANY,
    copyright = ASSEMBLY_COPYRIGHT,
    description = "Selenium WebDriver API .NET Bindings",
    informational_version = ASSEMBLY_INFORMATIONAL_VERSION,
    product = ASSEMBLY_PRODUCT,
    title = "Selenium WebDriver",
    version = ASSEMBLY_VERSION,
)

generated_resource_utilities(
    name = "resource-utilities",
    out = "ResourceUtilities.g.cs",
    resources = {
        "//javascript/atoms/fragments:find-elements.js": "FindElementsAtom",
        "//javascript/atoms/fragments:is-displayed.js": "IsDisplayedAtom",
        "//javascript/cdp-support:mutation-listener.js": "MutationListenerAtom",
        "//javascript/webdriver/atoms:get-attribute.js": "GetAttributeAtom",
        "//third_party/js/selenium:webdriver_json": "WebDriverPrefsJson",
    },
)

csharp_sourcelink_library(
    name = "webdriver-net462",
    srcs = [
        ":assembly-info",
        ":resource-utilities",
    ] + glob([
        "**/*.cs",
    ]) + ["//dotnet/src/webdriver/DevTools:srcs"] + devtools_version_targets(),
    out = "Selenium.WebDriver",
    keyfile = "//dotnet:Selenium.snk",
    langversion = "14.0",
    nullable = "enable",
    target_frameworks = [
        "net462",
    ],
    visibility = [
        "//dotnet:__subpackages__",
    ],
    deps = [
        nuget_package("Microsoft.Bcl.AsyncInterfaces"),
        nuget_package("System.Buffers"),
        nuget_package("System.Threading.Tasks.Extensions"),
        nuget_package("System.Memory"),
        nuget_package("System.Runtime.CompilerServices.Unsafe"),
        nuget_package("System.Text.Encodings.Web"),
        nuget_package("System.Text.Json"),
        nuget_package("System.Threading.Channels"),
        nuget_package("System.ValueTuple"),
    ],
)

csharp_sourcelink_library(
    name = "webdriver-netstandard2.0",
    srcs = [
        ":assembly-info",
        ":resource-utilities",
    ] + glob([
        "**/*.cs",
    ]) + ["//dotnet/src/webdriver/DevTools:srcs"] + devtools_version_targets(),
    out = "Selenium.WebDriver",
    keyfile = "//dotnet:Selenium.snk",
    langversion = "14.0",
    nullable = "enable",
    resources = [],
    target_frameworks = [
        "netstandard2.0",
    ],
    visibility = [
        "//dotnet:__subpackages__",
    ],
    deps = [
        nuget_package("NETStandard.Library"),
        nuget_package("Microsoft.Bcl.AsyncInterfaces"),
        nuget_package("System.Buffers"),
        nuget_package("System.Threading.Channels"),
        nuget_package("System.Threading.Tasks.Extensions"),
        nuget_package("System.Memory"),
        nuget_package("System.Runtime.CompilerServices.Unsafe"),
        nuget_package("System.Text.Encodings.Web"),
        nuget_package("System.Text.Json"),
    ],
)

csharp_sourcelink_library(
    name = "webdriver-net8.0",
    srcs = [
        ":assembly-info",
        ":resource-utilities",
    ] + glob([
        "**/*.cs",
    ]) + ["//dotnet/src/webdriver/DevTools:srcs"] + devtools_version_targets(),
    out = "Selenium.WebDriver",
    defines = [
        "NET8_0_OR_GREATER",
    ],
    keyfile = "//dotnet:Selenium.snk",
    langversion = "14.0",
    nullable = "enable",
    resources = [],
    target_frameworks = [
        "net8.0",
    ],
    visibility = [
        "//dotnet:__subpackages__",
    ],
    deps = [],
)

copy_file(
    name = "assets-nuget-readme",
    src = "//dotnet/src/webdriver/assets:nuget/README.md",
    out = "README.md",
)

copy_file(
    name = "assets-nuget-build-props",
    src = "//dotnet/src/webdriver/assets:nuget/build/Selenium.WebDriver.props",
    out = "Selenium.WebDriver.props",
)

copy_file(
    name = "assets-nuget-buildtransitive-props",
    src = "//dotnet/src/webdriver/assets:nuget/buildTransitive/Selenium.WebDriver.props",
    out = "transitiveSelenium.WebDriver.props",
)

copy_file(
    name = "manager-linux",
    src = "//common/manager:selenium-manager-linux",
    out = "manager/linux/selenium-manager",
    visibility = ["//dotnet/test/webdriver:__pkg__"],
)

copy_file(
    name = "manager-macos",
    src = "//common/manager:selenium-manager-macos",
    out = "manager/macos/selenium-manager",
    visibility = ["//dotnet/test/webdriver:__pkg__"],
)

copy_file(
    name = "manager-windows",
    src = "//common/manager:selenium-manager-windows",
    out = "manager/windows/selenium-manager.exe",
    visibility = ["//dotnet/test/webdriver:__pkg__"],
)

nuget_pack(
    name = "webdriver-pack",
    files = {
        "//common/images:selenium_logo_small.png": "icon.png",
        "//common/manager:selenium-manager-linux": "manager/linux/selenium-manager",
        "//common/manager:selenium-manager-macos": "manager/macos/selenium-manager",
        "//common/manager:selenium-manager-windows": "manager/windows/selenium-manager.exe",
        ":assets-nuget-readme": "README.md",
        ":assets-nuget-build-props": "build/Selenium.WebDriver.props",
        ":assets-nuget-buildtransitive-props": "buildTransitive/Selenium.WebDriver.props",
    },
    id = "Selenium.WebDriver",
    libs = {
        ":webdriver-net462": "Selenium.WebDriver",
        ":webdriver-net8.0": "Selenium.WebDriver",
        ":webdriver-netstandard2.0": "Selenium.WebDriver",
    },
    nuspec_template = "Selenium.WebDriver.nuspec",
    tags = [
        "block-network",
    ],
    version = SE_VERSION,
    visibility = [
        "//dotnet:__subpackages__",
    ],
)
