load("//dotnet:defs.bzl", "dotnet_nunit_test_suite", "nuget_package")

dotnet_nunit_test_suite(
    name = "support",
    size = "large",
    srcs = glob(
        ["**/*.cs"],
        exclude = [
            "bin/**",
            "obj/**",
        ],
    ),
    browsers = [
        "firefox",
    ],
    data = [
        "//dotnet/test/webdriver:test-data",
    ],
    project_sdk = "web",
    target_frameworks = ["net10.0"],
    deps = [
        "//dotnet/src/support",
        "//dotnet/src/webdriver:webdriver-net8.0",
        "//dotnet/test/testing.webserver",
        "//dotnet/test/webdriver",
        nuget_package("Microsoft.Bcl.AsyncInterfaces"),
        nuget_package("Moq"),
    ],
)
